--- a/my_trello/front/package.json
+++ b/my_trello/front/package.json
@@ -22,6 +22,7 @@
     "primeicons": "^7.0.0",
     "primeng": "^17.18.0",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.7.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
