--- a/social-media/api/src/main/resources/application.properties
+++ b/social-media/api/src/main/resources/application.properties
@@ -6,4 +6,4 @@ quarkus.datasource.password=root
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/socialmedia
 quarkus.datasource.jdbc.max-size=18
 
-# quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.database.generation=drop-and-create
