Tests with erros

--- a/social-media/api/src/main/resources/application.properties
+++ b/social-media/api/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 quarkus.datasource.db-kind=postgresql 
 quarkus.datasource.username=postgres
 quarkus.datasource.password=root
-
 # quarkus.datasource.jdbc.url=jdbc:postgresql://0.0.0.0:5432/socialmedia
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/socialmedia
 quarkus.datasource.jdbc.max-size=18
-
 # quarkus.hibernate-orm.database.generation=drop-and-create
+
+%test.quarkus.datasource.db-kind=h2 
+%test.quarkus.datasource.username=sa
+%testquarkus.datasource.password=sa
+# %testquarkus.datasource.jdbc.url=jdbc:postgresql://0.0.0.0:5432/socialmedia
+%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:socialmedia
+%test.quarkus.datasource.jdbc.max-size=18
+%test.quarkus.hibernate-orm.database.generation=drop-and-create
+%test.quarkus.hibernate-orm.log.sql=true
