--- a/social-media/api/src/main/resources/application.properties
+++ b/social-media/api/src/main/resources/application.properties
@@ -6,6 +6,8 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/socialmedia
 quarkus.datasource.jdbc.max-size=18
 # quarkus.hibernate-orm.database.generation=drop-and-create
 
+quarkus.swagger-ui.always-include=true
+
 %test.quarkus.datasource.db-kind=h2 
 %test.quarkus.datasource.username=sa
 %testquarkus.datasource.password=sa
