--- a/social-media/api/src/main/resources/application.properties
+++ b/social-media/api/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 quarkus.datasource.db-kind=postgresql 
 quarkus.datasource.username=postgres
 quarkus.datasource.password=root
-# quarkus.datasource.jdbc.url=jdbc:postgresql://0.0.0.0:5432/socialmedia
+#quarkus.datasource.jdbc.url=jdbc:postgresql://host.docker.internal:5432/socialmedia
+# quarkus.datasource.jdbc.url=jdbc:postgresql://postgres_db:5432/socialmedia
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/socialmedia
 quarkus.datasource.jdbc.max-size=18
 # quarkus.hibernate-orm.database.generation=drop-and-create
